--- a/readme
+++ b/readme
@@ -1,1 +1,22 @@
+# MapReduce K-Means Clustering
+
+## Description
+This project implements a MapReduce framework from scratch to perform K-Means clustering on a given dataset in a distributed manner. Each component (master, mappers, reducers) runs as a separate process and communicates using gRPC.
+
+## Components
+1. **Master**: Manages the entire process, including splitting input data, invoking mappers, and reducers, handling failures, and compiling final centroids.
+2. **Mappers**: Process input data chunks, compute nearest centroids for data points, and partition the data for reducers.
+3. **Reducers**: Aggregate data points belonging to the same centroid, compute new centroids, and handle shuffle and sort operations.
+
+## Prerequisites
+- Python 3.x
+- gRPC library (`grpcio` and `grpcio-tools`)
+- NumPy library (`numpy`)
+
+Install the required libraries:
+```sh
+pip install grpcio grpcio-tools numpy
+
+
+To build proto files:
 python3 -m grpc_tools.protoc -I=. --python_out=. --grpc_python_out=. master.proto
